--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,11 @@
  }
 
  .page {
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: row;
    position: relative;
-   min-height: 100vh;
+   height: 100vh;
  }
 
  .top {
